--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-Hello world!
+<html>
+    <body>
+        <section>
+            mail: hi@fourfifteen.studio
+        </section>
+    </body>
+</html>
