Adding t&c and privacy policy drafts.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <body>
         <section>
-            mail: hi@fourfifteen.studio
+            mail: fourfifteen.team@gmail.com
         </section>
     </body>
 </html>
